# fogcutter

./: .gitignore  LICENSE  README.md  fogcutter.toml.example  main.py  pyproject.toml
.github/workflows/: publish.yml
src/fogcutter/: __init__.py  config.py  models.py  pipeline.py
src/fogcutter/blackbox/: consistency.py  reflection.py
src/fogcutter/providers/: __init__.py  base.py  gemini.py  openai.py
src/fogcutter/whitebox/: __init__.py  entropy.py  perplexity.py
tests/: test_whitebox.py
